add dedicated CardLink component
so consumers can easily build cards without extra manual effort

--- a/apps/docs/app/(docs)/components/card/page.mdx
+++ b/apps/docs/app/(docs)/components/card/page.mdx
@@ -20,6 +20,7 @@ import {
   CardContent,
   CardDescription,
   CardImage,
+  CardLink,
   CardOverflow,
   CardTitle,
 } from "@optiaxiom/react/unstable";
@@ -35,7 +36,10 @@ export default () => (
     <CardImage />
 
     <CardContent>
-      <CardTitle />
+      <CardTitle>
+        <CardLink />
+      </CardTitle>
+
       <CardDescription />
     </CardContent>
   </Card>
