Add progress doc

--- a/apps/docs/app/(docs)/components/progress/page.mdx
+++ b/apps/docs/app/(docs)/components/progress/page.mdx
@@ -12,6 +12,12 @@ Display feedback on status of task or length of a process.
 
 <Demo component="progress/usage" />
 
+### Appearance
+
+Use the `intent` prop to select between the different progress types.
+
+<Demo component="progress/appearance-usage" />
+
 ### Related
 
 <Cards items={["Skeleton", "Spinner"]} />
