--- a/apps/docs/app/(docs)/components/input/page.mdx
+++ b/apps/docs/app/(docs)/components/input/page.mdx
@@ -50,6 +50,12 @@ Use the `addonPointerEvents` prop to control whether clicking the addons focuses
 
 <Demo component="input/addon-pointer-usage" />
 
+### Appearance
+
+Use the `appearance` prop to select between the different input appearances.
+
+<Demo component="input/appearance-usage" />
+
 ### Related
 
 <Cards items={["SearchInput", "Textarea"]} />
