Update banner docs

--- a/apps/docs/app/(docs)/components/banner/page.mdx
+++ b/apps/docs/app/(docs)/components/banner/page.mdx
@@ -24,6 +24,12 @@ Use the `onDismiss` prop to show a close button to the top right of the banner.
 
 <Demo component="banner/close-usage" />
 
+### Action
+
+Display with customizable interactive actions.
+
+<Demo component="banner/button-usage" />
+
 ### Related
 
 <Cards items={["Alert", "Toast"]} />
