document badge variant rename

--- a/apps/docs/app/(docs)/components/badge/page.mdx
+++ b/apps/docs/app/(docs)/components/badge/page.mdx
@@ -36,6 +36,10 @@ Set `asChild` to `true` and wrap children in an `<a>` element to render badge as
 
 ## Changelog
 
+### 0.13.0
+
+- Renamed variants `light -> subtle` and `solid -> strong`
+
 ### 0.1.0
 
 - Added component
