--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -30,6 +30,7 @@ import {
   ComboboxSeparator,
   ComboboxTrigger,
   ComboboxValue,
+  ComboboxVirtualized,
 } from "@optiaxiom/react";
 
 export default () => (
@@ -52,6 +53,12 @@ export default () => (
           <ComboboxCheckboxItem />
           <ComboboxRadioItem />
         </ComboboxGroup>
+
+        <ComboboxVirtualized>
+          <ComboboxItem />
+          <ComboboxCheckboxItem />
+          <ComboboxRadioItem />
+        </ComboboxVirtualized>
 
         <ComboboxEmpty />
         <ComboboxSeparator />
@@ -82,6 +89,8 @@ export default () => (
 <PropsTable component="ComboboxInput" />
 ### ComboboxScrollArea
 <PropsTable component="ComboboxScrollArea" />
+### ComboboxVirtualized
+<PropsTable component="ComboboxVirtualized" />
 ### ComboboxItem
 <PropsTable component="ComboboxItem" />
 ### ComboboxCheckboxItem
