remove Autocomplete component

--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -141,7 +141,7 @@ Use the `loading` prop on `ComboboxScrollArea` to show a loading spinner if the 
 
 ### Related
 
-<Cards items={["Autocomplete", "DropdownMenu", "Select"]} />
+<Cards items={["DropdownMenu", "Select"]} />
 
 ## Props
 
