--- a/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
+++ b/apps/docs/app/(docs)/components/dropdown-menu/page.mdx
@@ -114,7 +114,7 @@ Make sure to enable `asChild` prop on `AlertDialogTrigger` and call `event.preve
 
 ### Related
 
-<Cards items={["Autocomplete", "Select"]} />
+<Cards items={["Combobox", "Select"]} />
 
 ## Props
 
