--- a/apps/docs/app/(docs)/components/select/page.mdx
+++ b/apps/docs/app/(docs)/components/select/page.mdx
@@ -51,7 +51,7 @@ export default () => (
 
 ### Related
 
-<Cards items={["Autocomplete", "Combobox", "DropdownMenu"]} />
+<Cards items={["Combobox", "DropdownMenu"]} />
 
 ## Props
 
