tokenize transition durations
to prevent hard coded values that might drift away from each other easily

--- a/apps/docs/app/(docs)/styling/design-tokens/page.mdx
+++ b/apps/docs/app/(docs)/styling/design-tokens/page.mdx
@@ -70,34 +70,38 @@ You can use this `theme` object when implementing any CSS-in-JS solutions.
 
 ## Reference
 
-### `borderRadius`
+### borderRadius
 
 <Scale themeKey="borderRadius" values={theme.borderRadius} />
 
-### `boxShadow`
+### boxShadow
 
 <Scale themeKey="boxShadow" values={theme.boxShadow} />
 
-### `colors`
+### colors
 
 <Scale themeKey="colors" values={theme.colors} />
 
-### `fontFamily`
+### duration
+
+<Scale themeKey="duration" values={theme.duration} />
+
+### fontFamily
 
 <Scale themeKey="fontFamily" values={theme.fontFamily} />
 
-### `fontSize`
+### fontSize
 
 <Scale themeKey="fontSize" values={theme.fontSize} />
 
-### `maxSize`
+### maxSize
 
 <Scale themeKey="maxSize" values={theme.maxSize} />
 
-### `size`
+### size
 
 <Scale themeKey="size" values={theme.size} />
 
-### `zIndex`
+### zIndex
 
 <Scale themeKey="zIndex" values={theme.zIndex} />
