add TableActions component for row actions

--- a/apps/docs/app/(docs)/components/table/page.mdx
+++ b/apps/docs/app/(docs)/components/table/page.mdx
@@ -50,16 +50,30 @@ export default () => (
 ### Table
 
 <PropsTable component="Table" />
+
 ### TableHeader
+
 <PropsTable component="TableHeader" />
+
 ### TableHeaderCell
+
 <PropsTable component="TableHeaderCell" />
+
 ### TableBody
+
 <PropsTable component="TableBody" />
+
 ### TableRow
+
 <PropsTable component="TableRow" />
+
 ### TableCell
+
 <PropsTable component="TableCell" />
+
+### TableActions
+
+<PropsTable component="TableActions" />
 
 ## Changelog
 
