add data table docs

--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -137,6 +137,8 @@ Use the `loading` prop on `ComboboxScrollArea` to show a loading spinner if the 
 
 ### Virtualized
 
+We can use `ComboboxVirtualized` component to improve performance when rendering a large number of items inside the combobox.
+
 <Demo component="combobox/virtualized-usage" meta="{32-38}" />
 
 ### Related
