update margin/padding docs to clearly state props
instead of just referring to legacy spacing scale

--- a/apps/docs/app/(docs)/styling/margin/page.mdx
+++ b/apps/docs/app/(docs)/styling/margin/page.mdx
@@ -11,14 +11,18 @@ import { Demo } from "@/components/demo";
 
 ### Usage
 
-Use the space scale to set the margin of elements.
+Use the `m` prop to set the margin on all sides of elements.
 
 <Demo component="margin/usage" />
 
 ### Multiple sides
 
+Use the `mx` prop to set inline margin on left and right side and `my` prop to set block margin on top and bottom of elements.
+
 <Demo component="margin/multiple-usage" />
 
 ### Single side
+
+Use the `mt` (margin-top), `mr` (margin-right), `mb` (margin-bottom), and `ml` (margin-left) props to set margins on individual sides of an element.
 
 <Demo component="margin/single-usage" />
