--- a/apps/docs/app/(docs)/styling/padding/page.mdx
+++ b/apps/docs/app/(docs)/styling/padding/page.mdx
@@ -11,14 +11,18 @@ import { Demo } from "@/components/demo";
 
 ### Usage
 
-Use the space scale to set the padding of elements.
+Use the `p` prop to set the padding on all sides of elements.
 
 <Demo component="padding/usage" />
 
 ### Multiple sides
 
+Use the `px` prop to set inline padding on left and right side and `py` prop to set block padding on top and bottom of elements.
+
 <Demo component="padding/multiple-usage" />
 
 ### Single side
+
+Use the `pt` (padding-top), `pr` (padding-right), `pb` (padding-bottom), and `pl` (padding-left) props to set padding on individual sides of an element.
 
 <Demo component="padding/single-usage" />
