add row selection in DataTable

--- a/apps/docs/app/(docs)/components/data-table/page.mdx
+++ b/apps/docs/app/(docs)/components/data-table/page.mdx
@@ -31,13 +31,19 @@ Headers in `DataTable` are sticky by default. Set a height on the component to a
 
 ### Column pinning
 
-Follow the [column pinning guide](https://tanstack.com/table/v8/docs/guide/column-pinning) and use the `columnPinning` option to pin columns either to the left or right side of the table.
+Follow the [column pinning guide](https://tanstack.com/table/latest/docs/guide/column-pinning) and use the `columnPinning` option to pin columns either to the left or right side of the table.
 
 <Demo component="data-table/sticky-column-usage" />
 
+### Row selection
+
+Follow the [row selection guide](https://tanstack.com/table/latest/docs/guide/row-selection) to allow selecting and highlighting rows.
+
+<Demo component="data-table/row-selection-usage" />
+
 ### Pagination
 
-`DataTable` supports both client-side and server-side pagination. Follow the [pagination guide](https://tanstack.com/table/v8/docs/guide/pagination) to learn how to implement pagination with TanStack Table.
+`DataTable` supports both client-side and server-side pagination. Follow the [pagination guide](https://tanstack.com/table/latest/docs/guide/pagination) to learn how to implement pagination with TanStack Table.
 
 #### Client side
 
@@ -59,7 +65,7 @@ Set the `loading` prop to `true` to show a loading skeleton while your table dat
 
 ### Sorting
 
-`DataTable` supports both client-side and server-side sorting. Follow the [sorting guide](https://tanstack.com/table/v8/docs/guide/sorting) to learn how to implement sorting with TanStack Table.
+`DataTable` supports both client-side and server-side sorting. Follow the [sorting guide](https://tanstack.com/table/latest/docs/guide/sorting) to learn how to implement sorting with TanStack Table.
 
 #### Client side
 
