add DatePicker component
combines Calendar and Popover to create easy to use date pickers

--- a/apps/docs/app/(docs)/components/date-input/page.mdx
+++ b/apps/docs/app/(docs)/components/date-input/page.mdx
@@ -13,7 +13,7 @@ Input field with calendar that lets user enter dates.
 
 ## Props
 
-### Calendar
+### DateInput
 
 <PropsTable component="DateInput" />
 
