--- a/apps/docs/app/(docs)/components/select/page.mdx
+++ b/apps/docs/app/(docs)/components/select/page.mdx
@@ -24,14 +24,11 @@ import {
   SelectRadioItem,
   SelectSeparator,
   SelectTrigger,
-  SelectValue,
 } from "@optiaxiom/react";
 
 export default () => (
   <Select>
-    <SelectTrigger>
-      <SelectValue />
-    </SelectTrigger>
+    <SelectTrigger />
 
     <SelectContent>
       <SelectItem />
@@ -60,8 +57,6 @@ export default () => (
 <PropsTable component="Select" />
 ### SelectTrigger
 <PropsTable component="SelectTrigger" />
-### SelectValue
-<PropsTable component="SelectValue" />
 ### SelectContent
 <PropsTable component="SelectContent" />
 ### SelectItem
