refactor demo canvas
and combine all different canvas into single component

--- a/apps/docs/app/(docs)/styling/text-color/page.mdx
+++ b/apps/docs/app/(docs)/styling/text-color/page.mdx
@@ -11,4 +11,4 @@ Use `color` prop to control the text color of an element.
 
 ### Usage
 
-<Demo component="color/usage" />
+<Demo component="font/color-usage" />
