replace iframes with fake iframe using portals
to simplify adding showing responsive demos

--- a/apps/docs/app/(docs)/components/separator/page.mdx
+++ b/apps/docs/app/(docs)/components/separator/page.mdx
@@ -28,11 +28,7 @@ You can also use object or array prop notation to change orientation at various 
   Resize the canvas to see the orientation change:
 </Alert>
 
-<Demo
-  iframe="/iframe/separator/"
-  height="150"
-  component="separator/responsive-usage"
-/>
+<Demo component="separator/responsive-usage" resizable />
 
 ## Props
 
