--- a/apps/docs/app/(docs)/styling/page.mdx
+++ b/apps/docs/app/(docs)/styling/page.mdx
@@ -27,10 +27,6 @@ You can also use object or array prop notation to apply styles at various respon
   Resize the canvas to see the layout change:
 </Alert>
 
-<Demo
-  iframe="/iframe/styling/"
-  height="150"
-  component="styles/responsive-usage"
-/>
+<Demo component="styles/responsive-usage" resizable />
 
 Check out the documentation on [Responsive Styles](/styling/responsive-styles/).
