--- a/apps/docs/app/(docs)/styling/responsive-styles/page.mdx
+++ b/apps/docs/app/(docs)/styling/responsive-styles/page.mdx
@@ -40,7 +40,4 @@ export function App() {
 
 ### Example
 
-<Demo
-  iframe="/iframe/responsive/"
-  component="styles/responsive-complex-usage"
-/>
+<Demo component="styles/responsive-complex-usage" resizable />
