add docs for flex style props

--- a/apps/docs/app/(docs)/styling/max-height/page.mdx
+++ b/apps/docs/app/(docs)/styling/max-height/page.mdx
@@ -1,7 +1,7 @@
 import { Scale } from "@/components/scale";
 import { Demo } from "@/components/demo";
 
-# Max-Height
+# Max Height
 
 Use `maxH` prop to control the max-height of an element.
 
