--- a/apps/docs/app/(docs)/styling/max-width/page.mdx
+++ b/apps/docs/app/(docs)/styling/max-width/page.mdx
@@ -1,7 +1,7 @@
 import { Scale } from "@/components/scale";
 import { Demo } from "@/components/demo";
 
-# Max-Width
+# Max Width
 
 Use `maxW` prop to control the max-width of an element.
 
