add responsive gap demo

--- a/apps/docs/app/(docs)/styling/gap/page.mdx
+++ b/apps/docs/app/(docs)/styling/gap/page.mdx
@@ -14,3 +14,7 @@ import { Demo } from "@/components/demo";
 ### Usage
 
 <Demo component="gap/usage" />
+
+### Responsive
+
+<Demo component="gap/responsive-usage" resizable />
