--- a/apps/docs/app/(docs)/components/data-table/page.mdx
+++ b/apps/docs/app/(docs)/components/data-table/page.mdx
@@ -56,7 +56,7 @@ Follow the [row selection guide](https://tanstack.com/table/latest/docs/guide/ro
 
 ### Row actions
 
-Use the `TableActions` component to show dropdown menus within rows that are only visible when the user hovers over the row or navigates to the menu using keyboards.
+Use the `TableAction` component to show dropdown menus within rows that are only visible when the user hovers over the row or navigates to the menu using keyboards.
 
 <Alert intent="warning" mt="16">
   Hover over the rows to perform more actions:
@@ -132,9 +132,9 @@ Columns will be virtualized when there are more than 20 columns in a table and r
 
 <PropsTable component="DataTableFooter" />
 
-### TableActions
+### TableAction
 
-<PropsTable component="TableActions" />
+<PropsTable component="TableAction" />
 
 ## Changelog
 
