--- a/apps/docs/app/(docs)/components/table/page.mdx
+++ b/apps/docs/app/(docs)/components/table/page.mdx
@@ -34,7 +34,9 @@ export default () => (
 
     <TableBody>
       <TableRow>
-        <TableCell />
+        <TableCell>
+          <TableAction />
+        </TableCell>
       </TableRow>
     </TableBody>
   </Table>
@@ -71,9 +73,9 @@ export default () => (
 
 <PropsTable component="TableCell" />
 
-### TableActions
+### TableAction
 
-<PropsTable component="TableActions" />
+<PropsTable component="TableAction" />
 
 ## Changelog
 
