keep "use client" directive in demo code snippets

--- a/apps/docs/app/(docs)/components/dialog/page.mdx
+++ b/apps/docs/app/(docs)/components/dialog/page.mdx
@@ -18,7 +18,7 @@ Display a modal dialog box.
 
 Use the `open` and `defaultOpen` props to toggle between controlled and uncontrolled usage. And combine it with `onOpenChange` to listen for changes to the state.
 
-<Demo component="dialog/controlled-usage" meta="{17}" />
+<Demo component="dialog/controlled-usage" meta="{19}" />
 
 ### Sizes
 
@@ -30,7 +30,7 @@ Use the `size` prop to change the size of the dialog box.
 
 You can add accessible description to the modal using the `description` prop on `DialogHeader` component.
 
-<Demo meta="{16}" component="dialog/description-usage" />
+<Demo component="dialog/description-usage" meta="{18}" />
 
 ### Customize trigger
 
@@ -38,13 +38,13 @@ By default we use the `Button` component for the dialog trigger which accepts al
 
 We can also completely change the trigger by using `asChild` and passing our own component.
 
-<Demo component="dialog/trigger-usage" meta="{16-20}" />
+<Demo component="dialog/trigger-usage" meta="{18-22}" />
 
 ### Form dialogs
 
 Wrap `DialogBody` and `DialogFooter` with the `DialogForm` component to use forms in dialogs.
 
-<Demo component="dialog/form-usage" meta="{31-41,62}" />
+<Demo component="dialog/form-usage" meta="{33-43,64}" />
 
 ### Nested dialogs
 
