populate select items by default
to simplify usage and handle the default/majority use case

--- a/apps/docs/app/(docs)/components/combobox/page.mdx
+++ b/apps/docs/app/(docs)/components/combobox/page.mdx
@@ -18,6 +18,8 @@ Combobox works with lists of items provided via the `items` prop. The basic stru
 - `ComboboxTrigger`
 - `ComboboxContent`
 
+Items can be an array of strings or it can be an array of objects.
+
 The trigger can be provided a `placeholder` to display in case no values have been selected yet.
 
 <Demo component="combobox/overview/usage" />
